--- a/frontend_php/src/styleadmin.css
+++ b/frontend_php/src/styleadmin.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
 .admin-left-col {
     background-color: rgba(20, 20, 20, 0.3);
     padding: 1.5vh;
